  appId: com.mate_app
---  
- launchApp
- tapOn: "INGRESA USUARIO"
- inputText: "JOSY"
- tapOn: "INGRESA PASSWORD"
- inputText: "Test1234"            
- tapOn: "INGRESAR"
- tapOn: "OK"
- stopApp
